--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+
+<font size=6>我去！</font>
+        <audio controls id="mymp3">
+        <source src="assets/我去.mp3" type="audio/mpeg">
+        </audio>
+        <br>
 
     <font size=6>有两个年轻人</font>
         <audio controls id="mymp3">
